<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/infectionStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_infected" />

    <TextView
        android:id="@+id/infectionStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_user_status_is_set_to_not_infected"
        android:textColor="@color/colorGreenCured" />

    <TextView
        android:id="@+id/onlineStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_cannot_update_your_status_you_are_offline" />

    <TextView
        android:id="@+id/user_prob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

</LinearLayout>